Expertise and Contact

--- a/expertise.html
+++ b/expertise.html
@@ -24,9 +24,9 @@
                 </div>
                 <div class="header-menu">
                     <a class="header-menu-link" href="#about">о нас</a>
-                    <a class="header-menu-link" href=""> экспертизы</a>
+                    <a class="header-menu-link" href="#expertize"> экспертизы</a>
                     <a class="header-menu-link" href="">контакты</a>
-                    <a class="header-menu-link" href="">заявка</a>
+                    <a class="header-menu-link" href="#contact">заявка</a>
                 </div>
             </div>
         </div>
@@ -131,6 +131,142 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <a class="anchor" id="expertize"></a>
+    <section class="expertize">
+        <div class="expertize-container container-xl">
+            <div class="expertize-title">
+                <img src="img/svg/logo-small.svg">&nbsp;&nbsp;
+                <h3>ВИДЫ ЭКСПЕРТИЗ</h3>
+            </div>
+            <div class="expertize-card-wrap">
+                <div class="expertize-card-item" style="background-image: url('img/exp1.png')">
+                    <div>
+                        <p>Автомеханические</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp2.png')">
+                    <div>
+                        <p>Строительно-технические</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp3.png')">
+                    <div>
+                        <p>Пожарной безопасности</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp4.png')">
+                    <div>
+                        <p>Строительных материалов</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp5.png')">
+                    <div>
+                        <p>Правотворческие</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp6.png')">
+                    <div>
+                        <p>Консультирование органов власти и управления</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp7.png')">
+                    <div>
+                        <p>Правовые</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp8.png')">
+                    <div>
+                        <p>Лингвистические</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp9.png')">
+                    <div>
+                        <p>Определение норм расходов топлива</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp10.png')">
+                    <div>
+                        <p>Научно-исследовательских работ</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp11.png')">
+                    <div>
+                        <p>Почвоведческие</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp12.png')">
+                    <div>
+                        <p>Биологические</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp13.png')">
+                    <div>
+                        <p>Бухгалтерские</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp14.png')">
+                    <div>
+                        <p>Психологические</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp15.png')">
+                    <div>
+                        <p>Финансово-экономические</p>
+                    </div>
+                </div>
+                <div class="expertize-card-item" style="background-image: url('img/exp16.png')">
+                    <div>
+                        <p>Образовательных программ</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a class="anchor" id="contact"></a>
+    <section class="contact">
+        <div class="container-xl">
+            <div class="contact-container">
+                <div class="contact-title">
+                    <img src="img/svg/contact-phone.svg">&nbsp;&nbsp;
+                    <h3>СВЯЗАТЬСЯ С НАМИ</h3>
+                </div>
+                <form>
+
+
+                    <div class="container contact-fields">
+                        <div class="row" style="width: 100%">
+                            <div class="col-md-12 col-lg-7">
+                                <div class="row" style="width: 100%">
+                                    <div class="contact-fields contact-field-1 col-sm-12 col-md-6">
+                                        <input type="text" placeholder="Имя">
+                                        <input type="text" placeholder="Название организации">
+                                    </div>
+                                    <div class="contact-fields contact-field-2 col-sm-12 col-md-6">
+                                        <input type="text" placeholder="Телефон">
+                                        <input type="email" placeholder="Электронная почта">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12 col-lg-5">
+                                <div class="contact-text">
+                                    <textarea placeholder="Сообщение"></textarea>
+                                    <button type="submit"> <img src="img/svg/chevron-right.svg"> </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <section class="partners">
+        <div class="partners-container container-xl">
+            <h3>НАШИ ПАРТНЁРЫ</h3>
         </div>
     </section>
 
