--- a/expertise.html
+++ b/expertise.html
@@ -2,13 +2,19 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0,
+                      minimum-scale=1.0, maximum-scale=1.0">
     <title>Центр экспертизы ТОГУ</title>
+
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <script src="js/bootstrap/bootstrap.bundle.js"></script>
+
     <script src="js/jquery/jquery-3.7.0.min.js"></script>
+
+    <script src="js/swiper/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="css/swiper/swiper-bundle.min.css">
 
 </head>
 
@@ -24,8 +30,8 @@
                 </div>
                 <div class="header-menu">
                     <a class="header-menu-link" href="#about">о нас</a>
-                    <a class="header-menu-link" href="#expertize"> экспертизы</a>
-                    <a class="header-menu-link" href="">контакты</a>
+                    <a class="header-menu-link" href="#expertize">экспертизы</a>
+                    <a class="header-menu-link" href="#our-contact">контакты</a>
                     <a class="header-menu-link" href="#contact">заявка</a>
                 </div>
             </div>
@@ -35,8 +41,15 @@
         <div class="container-xl">
             <div class="header-about">
                 <div class="header-about-text">
-                    <p>Добро пожаловать в Центр экспертиз ТОГУ - одну из наиболее уважаемых экспертных организаций на Дальнем Востоке! Наша команда экспертов обладает обширными знаниями в автомеханических, строительно-технических и экономических областях, что позволяет нам проводить независимые экспертизы высочайшего качества. За годы нашей работы
-                        мы провели более полутора тысячи экспертиз, которые помогли нашим клиентам выиграть множество судебных дел. Мы гордимся тем, что заключения, составленные нашими экспертами, стали надолго востребованными у заказчиков.</p>
+                    <p>Добро пожаловать в Центр экспертиз ТОГУ - одну из наиболее уважаемых экспертных организаций
+                        на Дальнем Востоке! Наша команда экспертов обладает обширными знаниями в автомеханических,
+                        строительно-технических и экономических областях, что позволяет нам проводить независимые
+                        экспертизы высочайшего качества.
+                    </p>
+                    <p>За годы нашей работы мы провели более полутора тысячи экспертиз, которые помогли нашим клиентам
+                        множество судебных дел. Мы гордимся тем, что заключения, составленные нашими экспертами, стали
+                        надолго востребованными у заказчиков.
+                    </p>
                 </div>
                 <div class="header-about-img">
                     <!--            <img src="img/header-img.png">-->
@@ -44,7 +57,20 @@
                 </div>
             </div>
         </div>
+
+
     </header>
+
+    <div class="header-top-mobile" id="menu-mobile">
+        <div class="header-top-wrapper container-xl">
+            <div class="header-menu-mobile">
+                <a class="header-menu-link" href="#about">о нас</a>
+                <a class="header-menu-link" href="#expertize">экспертизы</a>
+                <a class="header-menu-link" href="#our-contact">контакты</a>
+                <a class="header-menu-link" href="#contact">заявка</a>
+            </div>
+        </div>
+    </div>
 
     <section class="in-numbers">
         <div class="numbers container-xl">
@@ -254,7 +280,8 @@
                             <div class="col-md-12 col-lg-5">
                                 <div class="contact-text">
                                     <textarea placeholder="Сообщение"></textarea>
-                                    <button type="submit"> <img src="img/svg/chevron-right.svg"> </button>
+<!--                                    <button type="submit"> <img src="img/svg/chevron-right.svg"> </button>-->
+                                    <a class="send-button" href="mailto:expert@pnu.edu.ru"><img src="img/svg/chevron-right.svg"></a>
                                 </div>
                             </div>
                         </div>
@@ -267,11 +294,70 @@
     <section class="partners">
         <div class="partners-container container-xl">
             <h3>НАШИ ПАРТНЁРЫ</h3>
+
+            <!-- Slider main container -->
+            <div class="swiper partners-swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe1.png">
+                        <p>АО Ургалуголь</p>
+                    </div>
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe2.png">
+                        <p>Органы МВД РФ</p>
+                    </div>
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe3.png">
+                        <p>Полиметалл</p>
+                    </div>
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe4.png">
+                        <p>АО Бэт</p>
+                    </div>
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe1.png">
+                        <p>АО Ургалуголь</p>
+                    </div>
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe2.png">
+                        <p>Органы МВД РФ</p>
+                    </div>
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe3.png">
+                        <p>Полиметалл</p>
+                    </div>
+                    <div class="swiper-slide partners-swiper-slide">
+                        <img src="img/swipe4.png">
+                        <p>АО Бэт</p>
+                    </div>
+
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev swiper-nav-btn"></div>
+                <div class="swiper-button-next swiper-nav-btn"></div>
+            </div>
         </div>
     </section>
-
-
 </main>
+
+<a class="anchor" id="our-contact"></a>
+<footer>
+    <div class="container-xl our-contact">
+        <div class="contact-logo">
+            <a href="https://pnu.edu.ru/">
+                <img src="img/svg/logo-small-white.svg">&nbsp;&nbsp;
+                <p>ТИХООКЕАНСКИЙ<br>ГОСУДАРСТВЕННЫЙ<br>УНИВЕРСИТЕТ</p>
+            </a>
+        </div>
+        <div class="contact-info">
+            <p>г. Хабаровск, ул.&nbsp;Тихоокеанская, 136, аудитория 225л <br>
+                +7(4212)-76-02-59, expert@pnu.edu.ru</p>
+        </div>
+    </div>
+</footer>
 
 
 <script>
@@ -289,6 +375,25 @@
     catch (e) {
         console.log("Ошибка: смена цвета шапки")
     }
+</script>
+
+
+<script>
+    // меню на мобилке
+    var oNav = $('.header-top-mobile');
+    var oMain = $('.in-numbers');
+    var nNavTop = oNav.offset().top;
+    var sNavTop= 0;
+    $(window).scroll(function(){
+        sNavTop = $(this).scrollTop();
+        if(sNavTop >= nNavTop){
+            oNav.addClass('mobile-fixed');
+            oMain.addClass('pt56');
+        }else{
+            oNav.removeClass('mobile-fixed');
+            oMain.removeClass('pt56');
+        }
+    });
 </script>
 
 
@@ -311,6 +416,37 @@
     hiddenElements.forEach((el) => observer.observe(el));
 </script>
 
+
+<script src="js/swiper/swiper-bundle.min.js"></script>
+<script>
+    let cetPartners = new Swiper(".partners-swiper", {
+        loop: true,
+        // spaceBetween: 30,
+        slidesPerView: 3,
+        speed: 700,
+        grabCursor: 'true',
+        // autoHeight: true,
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        // mousewheel: true,
+        // keyboard: true,
+
+        breakpoints: {
+            0: {
+                slidesPerView: 2,
+            },
+            1000: {
+                slidesPerView: 3,
+            },
+        },
+
+        autoplay: {
+            delay: 4500,
+        },
+    });
+</script>
 
 </body>
 </html>
